--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "Professional ReadMe Generator using inquirer and node.js.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Haguermeister/readmeGen.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Haguermeister/readmeGen/issues"
+  },
+  "homepage": "https://github.com/Haguermeister/readmeGen#readme"
 }
